--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
-.showCard img {
-    padding: 500px;
+#comedy-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 20px;
 }
